# ERP-IPBA

./: .env.sample  .gitignore  README.md  pyproject.toml
src/: manage.py  package-lock.json  package.json  tailwind.config.js
src/authentication/: urls.py  views.py
src/authentication/templates/authentication/: auth_page.html
src/church/: admin.py  forms.py  models.py  urls.py  views.py
src/church/migrations/: 0001_initial.py  0002_meet.py
src/church/templates/church/: church.html  church_form.html  create_church.html  delete_church.html  view_church.html
src/erp_ipba/: asgi.py  settings.py  urls.py  views.py  wsgi.py
src/helpers/: _cloudinary.py
src/static/js/: main.js
src/static/js/components/: carousel.js  map.js  navbar.js
src/static/src/: input.css
src/staticfiles/js/components/: carousel.js
src/templates/: _base.html  index.html  landing_page.html
src/templates/admin/: base_site.html
src/templates/components/: carousel.html  contact.html  footer.html  hero.html  navbar.html  schedule.html
